<resources>
    <string name="app_name">FaceShift</string>
    <string name="face_layout_desc">face layout for selfie pictures</string>
    <string name="login">Login</string>
    <string name="log_in_to_your_account">Log in to your account</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="no_account_sign_up_here">No account? <b>Sign up here!</b></string>
    <string name="signup">SignUp</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_msg">Welcome!</string>

    <string name="channel_name">Main</string>
    <string name="notification_title">Take daily picture!</string>
    <string name="notification_text">Don\'t forget to take your daily picture!</string>
    <string name="logout">Logout</string>
    <string name="hello">Hello</string>

    <string name="take_photo">Take Photo</string>
    <string name="flip_camera">Flip Camera</string>

    <string name="create_a_new_account">Create a new account</string>
    <string name="camera">Camera</string>
    <string name="albums">Albums</string>
    <string name="password_requirements">Password Requirements</string>
    <string name="bullet">•</string>
    <string name="requirement_one">Password must be 8 characters long</string>
    <string name="Share">Share</string>
    <string name="Back">Back</string>
    <string name="login_user_msg">Logged in as $email</string>
    <string name="forgot_password_click_here">Forgot password? <b>Click here!</b></string>
    <string name="make_a_new_face_shift">Make a new Face Shift</string>
    <string name="album_title">Album Title</string>
    <string name="add_new_album">Add New Album</string>
    <string name="add_to_album">Add to Album</string>
    <string name="restart">Restart FaceShift</string>
</resources>