<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">


    <TextView
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/signup"
        style="@style/TextAppearance.MaterialComponents.Headline4"></TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/create_a_new_account"
        android:layout_below="@+id/Login"
        style="@style/TextAppearance.AppCompat.Caption"></TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailB"
        android:layout_above="@+id/PasswordB"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/emailA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress">

        </EditText>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PasswordB"
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/PasswordA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/enter_your_password">

        </EditText>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/SignUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_below="@+id/PasswordB"
        android:layout_marginTop="10dp"></Button>

    <TextView
        android:id="@+id/password_requirements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/SignUpButton"
        android:layout_marginTop="10dp"
        android:text="@string/password_requirements"></TextView>

    <TextView
        android:id="@+id/length_requirement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/requirement_one"
        android:layout_marginTop="10dp"
        android:textSize="10sp"
        android:layout_below="@+id/password_requirements">

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Password must contain one capital letter"
        android:layout_below="@id/length_requirement"
        android:textSize="10sp"
        android:layout_marginTop="10dp">

    </TextView>
</RelativeLayout>